# hftbt

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: demo_events.npz
docs/: hftbt.md
examples/: njit_market_making_demo.py
hftbt/: __init__.py  cli.py  events.py  fast.py  svg.py
hftbt/data/: __init__.py  cryptohftdata.py
scripts/: release.sh
